manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: development:/Namespace:/development
  name: development
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: development:/Service:development/web-app-service
  labels:
    app.kubernetes.io/name: web-app
  name: web-app-service
  namespace: development
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: web-app
    app.kubernetes.io/name: web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: development:apps/Deployment:development/web-app
  labels:
    app.kubernetes.io/name: web-app
  name: web-app
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app: web-app
        app.kubernetes.io/name: web-app
    spec:
      containers:
        - image: nginx:stable
          name: web-app
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: development:networking.k8s.io/Ingress:development/web-app-ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: web-app
  name: web-app-ingress
  namespace: development
spec:
  rules:
    - host: app.example.com
      http:
        paths:
          - backend:
              service:
                name: web-app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
